add caliburn.micro as submodule

--- a/src/Caliburn.Micro.Platform/Caliburn.Micro.Platform.NET45.csproj
+++ b/src/Caliburn.Micro.Platform/Caliburn.Micro.Platform.NET45.csproj
@@ -100,9 +100,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Caliburn.Micro\Caliburn.Micro.csproj">
-      <Project>{6d772b52-da8f-4784-971a-4bf50cb6d306}</Project>
-      <Name>Caliburn.Micro</Name>
+    <ProjectReference Include="..\Caliburn.Micro\Caliburn.Micro.NET40.csproj">
+      <Project>{5198b87d-8e7b-48d9-960d-63170a6956c5}</Project>
+      <Name>Caliburn.Micro.NET40</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
